# yt-aiogram

./: .gitignore  pyproject.toml  requirements.txt  run.py
app/youtube_download/: model.py  services.py
core/: main.py
core/database/: init_db.py
core/handlers/: comand.py  message.py
core/settings/: config.py  log.py
