[tool.poetry]
name = "ytdown"
version = "0.1.0"
description = "telegram bot for download video from youtube"
authors = ["nananaseek <nooobleemonk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
tortoise-orm = "^0.21.2"
yt-dlp = "^2024.5.26"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
